Debugging container and driver script